--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="row">
           <div class="col-sm-2"></div>
           <div class="col-sm-4">
-            <button type="button" class="btn btn-primary btn-lg" id="generate">Generate Password</button>
+            <button onclick="generate(num)" type="button" class="btn btn-primary btn-lg" id="generate">Generate Password</button>
           </div>
           <div class="col-sm-1"></div>
           <div class="col-sm-4">
