Copy to clipboard is done. Added if/else statement for numbers outside 8-128.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div>
           <div class="col-sm-1"></div>
           <div class="col-sm-4">
-            <button type="button" class="btn btn-primary btn-lg" id="copy">Copy to Clipboard</button>
+            <button onclick="copy()" type="button" class="btn btn-primary btn-lg" id="copy">Copy to Clipboard</button>
           </div>
         </div>
       </div>
